# cppgl

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
src/: CMakeLists.txt  buffer.h  camera.cpp  context.cpp  cppgl.h  debug.cpp  framebuffer.h  geometry.cpp  material.h  mesh.h  platform_gl.h  quad.h  query.h  shader.h  texture.h
